--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -137,6 +137,7 @@
       "@activepieces/piece-ntfy": ["packages/pieces/ntfy/src/index.ts"],
       "@activepieces/piece-onfleet": ["packages/pieces/onfleet/src/index.ts"],
       "@activepieces/piece-openai": ["packages/pieces/openai/src/index.ts"],
+      "@activepieces/piece-ora": ["packages/pieces/ora/src/index.ts"],
       "@activepieces/piece-pastebin": ["packages/pieces/pastebin/src/index.ts"],
       "@activepieces/piece-pastefy": ["packages/pieces/pastefy/src/index.ts"],
       "@activepieces/piece-pipedrive": [
