feat(formaloo): initiate piece

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -60,6 +60,7 @@
         "packages/pieces/facebook-pages/src/index.ts"
       ],
       "@activepieces/piece-figma": ["packages/pieces/figma/src/index.ts"],
+      "@activepieces/piece-formaloo": ["packages/pieces/formaloo/src/index.ts"],
       "@activepieces/piece-freshdesk": [
         "packages/pieces/freshdesk/src/index.ts"
       ],
